--- a/task-04.html
+++ b/task-04.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 4</title>
     <link rel="stylesheet" href="css/common.css" />
+    <style>
+      #go-right {
+        background-color: #4caf50;
+      }
+      #go-left {
+        background-color: #f44336;
+      }
+    </style>
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
