--- a/task-02.html
+++ b/task-02.html
@@ -10,7 +10,6 @@
       .item {
         font-weight: 500;
       }
-
       .item:not(:last-child) {
         margin-bottom: 8px;
       }
@@ -20,7 +19,17 @@
     <p><a href="index.html">Go back</a></p>
 
     <ul id="ingredients"></ul>
-
+    <form class="form" autocomplete="off">
+      <input type="text" name="login" placeholder="Login" />
+      <input type="password" name="password" placeholder="Password" />
+      <button
+        class="btn"
+        type="submit"
+        data-tooltip="эта подсказка длиннее, чем элемент"
+      >
+        Register
+      </button>
+    </form>
     <script src="js/task-02.js" type="module"></script>
   </body>
 </html>
