--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <li><a href="task-09.html">Task 9</a></li>
       <li><a href="task-10.html">Task 10 (optional)</a></li>
       <li><a href="task-11.html">Task 11</a></li>
+      <li><a href="task-12.html">Task 12</a></li>
+      <li><a href="task-13.html">Task 13</a></li>
     </ul>
   </body>
 </html>
