--- a/task-11.html
+++ b/task-11.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task 10 (optional)</title>
+    <title>Task 11</title>
+    <link
+      href="
+    https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
+    "
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
@@ -20,8 +26,12 @@
         </select>
       </div>
       <button class="car-button">Поиск</button>
+      <button class="car-button js-reset">Сброс</button>
     </form>
     <ul class="js-list car-list"></ul>
+    <script src="
+    https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
+    "></script>
     <script src="js/task-11.js" type="module"></script>
   </body>
 </html>
