--- a/task-11.html
+++ b/task-11.html
@@ -25,7 +25,7 @@
           <option value="type">Модель</option>
         </select>
       </div>
-      <button class="car-button">Поиск</button>
+      <button class="car-button js-search">Поиск</button>
       <button class="car-button js-reset">Сброс</button>
     </form>
     <ul class="js-list car-list"></ul>
