--- a/task-06.html
+++ b/task-06.html
@@ -10,7 +10,9 @@
       #validation-input {
         border: 2px solid #bdbdbd;
       }
-
+      #name-input {
+        border: 2px solid #bdbdbd;
+      }
       #validation-input.valid {
         border-color: #4caf50;
       }
@@ -29,7 +31,19 @@
       data-length="6"
       placeholder="Please enter 6 symbols"
     />
+    <input
+      type="text"
+      id="name-input"
+      placeholder="Please enter your name and surname"
+    />
     <div class="error"></div>
+    <script
+      async
+      src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"
+      integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="js/task-06.js" type="module"></script>
   </body>
 </html>
