--- a/task-12.html
+++ b/task-12.html
@@ -27,6 +27,7 @@
     </style>
   </head>
   <body>
+    <p><a href="index.html">Go back</a></p>
     <div class="square"></div>
     <button type="button" class="btn">Go!</button>
 
