--- a/task-13.html
+++ b/task-13.html
@@ -29,6 +29,7 @@
     </style>
   </head>
   <body>
+    <p><a href="index.html">Go back</a></p>
     <p class="greeting">Hello</p>
     <div class="js-container">
       <div class="box js-box item-red" data-color="red">1</div>
