--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
       <li><a href="task-07.html">Task 7</a></li>
       <li><a href="task-08.html">Task 8</a></li>
       <li><a href="task-09.html">Task 9</a></li>
-      <li><a href="task-10.html">Task 10 (optional)</a></li>
+      <li><a href="task-10.html">Task 10</a></li>
       <li><a href="task-11.html">Task 11</a></li>
       <li><a href="task-12.html">Task 12</a></li>
       <li><a href="task-13.html">Task 13</a></li>
+      <li><a href="task-14.html">Task 14</a></li>
+      <li><a href="task-15.html">Task 14</a></li>
     </ul>
   </body>
 </html>
