--- a/task-15.html
+++ b/task-15.html
@@ -21,141 +21,224 @@
   <body>
     <p><a href="index.html">Go back</a></p>
     <ul class="section-list list js-list">
-      <a href="./images/Lera/IMG_2682.JPG"
-        ><img src="./images/Lera/IMG_2682.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2682.JPG"
+          ><img src="./images/Lera/IMG_2682.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2679.JPG"
-        ><img src="./images/Lera/IMG_2679.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2679.JPG"
+          ><img src="./images/Lera/IMG_2679.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2681.JPG"
-        ><img src="./images/Lera/IMG_2681.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2681.JPG"
+          ><img src="./images/Lera/IMG_2681.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2685.JPG"
-        ><img src="./images/Lera/IMG_2685.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2685.JPG"
+          ><img src="./images/Lera/IMG_2685.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2686.JPG"
-        ><img src="./images/Lera/IMG_2686.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2686.JPG"
+          ><img src="./images/Lera/IMG_2686.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2689.JPG"
-        ><img src="./images/Lera/IMG_2689.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2689.JPG"
+          ><img src="./images/Lera/IMG_2689.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2690.JPG"
-        ><img src="./images/Lera/IMG_2690.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2690.JPG"
+          ><img src="./images/Lera/IMG_2690.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2691.JPG"
-        ><img src="./images/Lera/IMG_2691.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2691.JPG"
+          ><img src="./images/Lera/IMG_2691.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2695.JPG"
-        ><img src="./images/Lera/IMG_2695.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2695.JPG"
+          ><img src="./images/Lera/IMG_2695.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2696.JPG"
-        ><img src="./images/Lera/IMG_2696.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2696.JPG"
+          ><img src="./images/Lera/IMG_2696.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2697.JPG"
-        ><img src="./images/Lera/IMG_2697.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2697.JPG"
+          ><img src="./images/Lera/IMG_2697.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2702.JPG"
-        ><img src="./images/Lera/IMG_2702.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2702.JPG"
+          ><img src="./images/Lera/IMG_2702.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2705.JPG"
-        ><img src="./images/Lera/IMG_2705.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2705.JPG"
+          ><img src="./images/Lera/IMG_2705.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2708.JPG"
-        ><img src="./images/Lera/IMG_2708.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2708.JPG"
+          ><img src="./images/Lera/IMG_2708.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2711.JPG"
-        ><img src="./images/Lera/IMG_2711.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2711.JPG"
+          ><img src="./images/Lera/IMG_2711.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2713.JPG"
-        ><img src="./images/Lera/IMG_2713.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2713.JPG"
+          ><img src="./images/Lera/IMG_2713.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2715.JPG"
-        ><img src="./images/Lera/IMG_2715.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2715.JPG"
+          ><img src="./images/Lera/IMG_2715.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2718.JPG"
-        ><img src="./images/Lera/IMG_2718.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2718.JPG"
+          ><img src="./images/Lera/IMG_2718.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2722.JPG"
-        ><img src="./images/Lera/IMG_2722.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2722.JPG"
+          ><img src="./images/Lera/IMG_2722.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2734.JPG"
-        ><img src="./images/Lera/IMG_2734.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2734.JPG"
+          ><img src="./images/Lera/IMG_2734.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2736.JPG"
-        ><img src="./images/Lera/IMG_2736.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2736.JPG"
+          ><img src="./images/Lera/IMG_2736.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2744.JPG"
-        ><img src="./images/Lera/IMG_2744.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2744.JPG"
+          ><img src="./images/Lera/IMG_2744.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2749.JPG"
-        ><img src="./images/Lera/IMG_2749.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2749.JPG"
+          ><img src="./images/Lera/IMG_2749.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2752.JPG"
-        ><img src="./images/Lera/IMG_2752.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2752.JPG"
+          ><img src="./images/Lera/IMG_2752.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2756.JPG"
-        ><img src="./images/Lera/IMG_2756.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2756.JPG"
+          ><img src="./images/Lera/IMG_2756.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2762.JPG"
-        ><img src="./images/Lera/IMG_2762.JPG" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2762.JPG"
+          ><img src="./images/Lera/IMG_2762.JPG" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/Lelya.jpg"
-        ><img src="./images/Lera/Lelya.jpg" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/Lelya.jpg"
+          ><img src="./images/Lera/Lelya.jpg" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/Lera.bmp"
-        ><img src="./images/Lera/Lera.bmp" alt="Lera" width="360"
-      /></a>
+      <li>
+        <a href="./images/Lera/Lera.bmp"
+          ><img src="./images/Lera/Lera.bmp" alt="Lera" width="360"
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2742.JPG"
-        ><img src="./images/Lera/IMG_2742.JPG" alt="Lera" width="360" height=""
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2742.JPG"
+          ><img
+            src="./images/Lera/IMG_2742.JPG"
+            alt="Lera"
+            width="360"
+            height=""
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2765.JPG"
-        ><img src="./images/Lera/IMG_2765.JPG" alt="Lera" width="360" height=""
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2765.JPG"
+          ><img
+            src="./images/Lera/IMG_2765.JPG"
+            alt="Lera"
+            width="360"
+            height=""
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2755.JPG"
-        ><img src="./images/Lera/IMG_2755.JPG" alt="Lera" width="360" height=""
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2755.JPG"
+          ><img
+            src="./images/Lera/IMG_2755.JPG"
+            alt="Lera"
+            width="360"
+            height=""
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2760.JPG"
-        ><img src="./images/Lera/IMG_2760.JPG" alt="Lera" width="360" height=""
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2760.JPG"
+          ><img
+            src="./images/Lera/IMG_2760.JPG"
+            alt="Lera"
+            width="360"
+            height=""
+        /></a>
+      </li>
 
-      <a href="./images/Lera/IMG_2721.JPG"
-        ><img src="./images/Lera/IMG_2721.JPG" alt="Lera" width="360" height=""
-      /></a>
+      <li>
+        <a href="./images/Lera/IMG_2721.JPG"
+          ><img
+            src="./images/Lera/IMG_2721.JPG"
+            alt="Lera"
+            width="360"
+            height=""
+        /></a>
+      </li>
     </ul>
-    <!-- <script src="
-    https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.1/simple-lightbox.min.js
-    "></script> -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.1/simple-lightbox.min.js"
       integrity="sha512-X1tKd7cMiYWKVDmFHSn+z1Y+BdrNG6Qvrhj3emg0ZOMsAuzug4ET9PmOFBgYyvcjI1hHGxhkQ1IXhOd9obYeFQ=="
@@ -168,6 +251,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="js/task-14.js" type="module"></script>
+    <script src="js/task-15.js" type="module"></script>
   </body>
 </html>
